--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">MyAccoutant</string>
 
-    <string name="title_activity_loading">Loading</string>
+    <string name="title_activity_loading">chargement</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_main2">Main2Activity</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Paramètres</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="Hello">Bienvenu dans MyAccountant</string>
+    <string name="password">mot de passe oublié?</string>
+    <string name="signUp">creer un nouveau compte</string>
+    <string name="step1">Etape 1: Informations de connexion</string>
+    <string name="step2">Etape 2: Informations financières</string>
+    <string name="incomes">revenues mensuelles</string>
 </resources>
